--- a/src/css/antoon.css
+++ b/src/css/antoon.css
@@ -1,7 +1,7 @@
 body {
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position: 100% 100%;
+    background-position: center center;
     background-size: 100% 100%;
 }
 
